
Just dump whatever you want to have mentioned in the release notes here. Please take care that it is in a way that allows copy&paste to the release notes. That is making sure that spelling/grammar/whatever is usable and that you are using complete sentences, not just single words. Please do use forum syntax and do *NOT* split lines after 80 chars!

Stuff that belongs in here:
* groundbreaking changes (new campaigns, extremely new feature, ...)
* changed dependencies (new things, version bumps, stuff that was removed)
* known bugs

The release team should empty this file after each release.


=======
CHANGES
=======

[section="Fixed WML load error reporting"]
A change introduced in version 1.11.15 caused WML parser/preprocessor errors found at game/add-on load time to not be reported to the player in the GUI, and the game to carry on with a incomplete and malformed WML tree in most cases. This issue was [url=http://r.wesnoth.org/p571380]reported[/url] on the forums by SkyOne and is fixed in this release.
[/section]

[section="Fixed whiteboard unit continuation problem"]
Blocker bug #22231 has now been fixed and unit continuations in planning mode should work as expected.
[/section]

[section="Changes to the Mushroom Groove overlay terrain"]
A change to the way how the Mushroom Groove terrain works might cause the need for some map rebalancing.
Previously the mixed fungus terrain worked always like plain Mushroom Groove, now it is handled like the forest overlays.
Movement is taken from the worst of both, defense is taken from the best value.
[/section]

[section="Example section 1"]
Example contents 1.
[/section]

[section="Example section 2"]
Example contents 2.
[/section]

==========
KNOWN BUGS
==========

[list][*]Example issue 1 (bug [bug]12345[/bug]).
[*]Example issue 2 (bug [bug]98765[/bug]).
[/list]