@@ -3,6 +3,11 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: https://github.com/wesnoth/wesnoth/blob/1.12/changelog
 
 Version 1.11.15+dev:
+ * Add-ons client:
+   * The Update All button is now displayed on all Add-on Manager views instead
+     of just the Upgradable filter view, and enabled only when there is at
+     least one add-on that may be upgraded.
+
  * Campaigns:
    * Northern Rebirth:
      * Fixed Sister Thera and Father Morvin respawning into the recall list if
