@@ -1,4 +1,8 @@
 Version 1.11.15+dev:
+ * Add-ons client:
+   * The Update All button is now displayed on all Add-on Manager views instead
+     of just the Upgradable filter view, and enabled only when there is at
+     least one add-on that may be upgraded.
  * Add-ons server:
    * Add-on metadata pattern blacklisting implemented.
  * Campaigns
